tests/baselines/reference/parserEnum4.errors.txt
==== tests/cases/compiler/parserEnum4.ts (1 errors) ====
    
    
        export enum SignatureFlags {
            ,
            ~
!!! parserEnum4.ts(4,9): error TS1008: Unexpected token; 'identifier' expected.
        }